# WarmAI

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.archivist/: inbox.md  prompt.md  proposed.patch.md  state.json
docs/: warmai-optimization-agent.md
docs/task-reports/: 2026-06-13-task-01-scaffold-python-package.md  2026-06-13-task-02-strict-contracts.md  2026-06-14-task-03-language-classification.md  2026-06-14-task-04-pii-detection-and-masking.md  2026-06-14-task-05-sqlite-migrations-and-repositories.md  2026-06-15-task-06-inference-control-primitives.md  2026-06-19-task-07-syntax-repair-and-partial-recovery.md  2026-06-19-task-08-versioned-prompt-and-inference-service.md  2026-06-19-task-09-pii-safe-idempotency.md  2026-06-19-task-10-fastapi-contract.md  2026-06-19-task-11-llama-cpp-adapter.md  2026-06-19-task-12-http-cli.md  2026-06-20-task-13-evaluation-runner.md  2026-06-20-task-14-smoke-docs-full-verification.md  2026-06-21-evaluation-baseline-and-failure-report.md  2026-06-21-evaluation-suite-runner.md  2026-06-21-hard-case-evaluation.md  2026-06-22-generate-prompt-v3.md  2026-06-22-jsonl-experiment-log.md  2026-06-22-optimization-agent-runner.md  2026-06-22-strict-flow-optimizer.md
evaluation/: core.jsonl  hard_cases.jsonl  non_task.jsonl  real_tasks.jsonl
migrations/: 001_initial.sql
src/warmai/: cli.py  main.py
src/warmai/api/: __init__.py  app.py  (+2 more)
tests/contract/: test_task_analysis_api.py
tests/e2e/: test_task_analysis_flow.py
tests/smoke/: test_real_adapter.py  test_service_startup.py
tests/unit/: test_cli.py
(+62 files in other folders)
