[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "warmai"
version = "0.1.0"
description = "WarmDock task-analysis model service"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiosqlite>=0.21,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.26,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
warmai = "warmai.cli:main"
warmai-evaluate = "warmai.evaluation.runner:main"
warmai-evaluate-suite = "warmai.evaluation.suite:main"
warmai-experiment-log = "warmai.evaluation.experiment_log:main"
warmai-optimize = "warmai.evaluation.optimizer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/warmai"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["warmai"]
